[package]
name = "embassy-stm32f767zi-dht11-ssd1306"
version = "0.2.0"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["nightly", "arch-cortex-m"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["stm32f767zi", "exti", "dual-bank", "time-driver-any", "unstable-pac", "rt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
dht-sensor = "0.2"
ssd1306 = "0.8"
embedded-graphics = "0.7.1"
heapless = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = true
